--- a/app/views/auth/signin.html
+++ b/app/views/auth/signin.html
@@ -9,7 +9,7 @@
                     </div>
                     <form ng-submit="signin()" name="signinForm" role="form" autocomplete="off">
                         <div class="form-group form-material floating">
-                            <input type="email" class="form-control" name="email" ng-model="user.email" ng-required/>
+                            <input type="email" class="form-control" name="email" ng-model="user.email" focus-if="!user.email" ng-required/>
                             <label class="floating-label">Email</label>
                         </div>
                         <div class="form-group form-material floating">
