--- a/app/views/servicerequests/_partials/create.html
+++ b/app/views/servicerequests/_partials/create.html
@@ -25,7 +25,7 @@
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="form-group form-material floating">
-                                            <input ng-model="servicerequest.reporter.phone" ng-required ng-minlength="2" type="text" name="phone" class="form-control" />
+                                            <input ng-model="servicerequest.reporter.phone" ng-required ng-minlength="2" focus-if="!servicerequest.reporter.phone" type="text" name="phone" class="form-control" />
                                             <label class="floating-label">Phone</label>
                                         </div>
                                     </div>
