--- a/app/styles/theme-overrides.css
+++ b/app/styles/theme-overrides.css
@@ -86,22 +86,25 @@ input,
 button,
 select,
 textarea .normal {
-    font-family: Lato, "Helvetica Neue", "HelveticaNeue-Light", Helvetica, Arial, sans-serif;
+  font-family: Lato, "Helvetica Neue", "HelveticaNeue-Light", Helvetica, Arial, sans-serif;
 }
 
 html,
 body {
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 .navside ul,
 .nav-active-white ul {
-    display: block;
+  display: block;
 }
 
 .navside .dropdown-toggle::after {
-    content: none;
+  content: none;
 }
+
+
+
 
 
 /*support angular bootstrap*/
@@ -110,130 +113,151 @@ body {
 .pagination,
 .carousel,
 .panel-title a {
-    cursor: pointer;
+  cursor: pointer;
 }
+
+
+
 
 
 /*settings style*/
 
 .search-settings {
-    padding: 0.9rem;
-    font-family: Lato;
+  padding: 0.9rem;
+  font-family: Lato;
 }
+
+
+
 
 
 /*issue styles*/
 
 .nav-servicerequests .nav-text {
-    margin-right: 1rem;
+  margin-right: 1rem;
 }
 
 .search-servicerequests {
-    padding: 0.9rem;
-    font-family: Lato;
+  padding: 0.9rem;
+  font-family: Lato;
 }
 
 .servicerequest .navbar {
-    /*display: inherit;*/
+  /*display: inherit;*/
 }
 
 .servicerequest .navbar-nav {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
 }
 
 .servicerequest .dropdown-toggle::after {
-    /*content: none;*/
+  /*content: none;*/
 }
+
+
+
 
 
 /*status navigation*/
 
 .nav-active-white .nav-link {
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
 }
+
+
+
 
 
 /*list*/
 
 .list-item-padded {
-    padding-top: 16px;
-    padding-bottom: 16px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
+
+
+
 
 
 /*navbar ovverides*/
 
 .navbar-nav .text-muted {
-    color: #636c72 !important;
+  color: #636c72 !important;
 }
 
 .navbar-nav .text-muted i {
-    /*opacity: .1;*/
+  /*opacity: .1;*/
 }
 
-.list > .list-item:hover:not(.active) {
-    background-color: #f9f9f9;
-    cursor: pointer;
-    -webkit-transition: background-color 0.2s ease-in;
-    transition: background-color 0.2s ease-in;
+.list>.list-item:hover:not(.active) {
+  background-color: #f9f9f9;
+  cursor: pointer;
+  -webkit-transition: background-color 0.2s ease-in;
+  transition: background-color 0.2s ease-in;
 }
 
-.nav > .nav-item:hover:not(.active) {
-    font-weight: bold;
-    cursor: pointer;
-    -webkit-transition: font-weight 0.2s ease-in;
-    transition: font-weight 0.2s ease-in;
+.nav>.nav-item:hover:not(.active) {
+  font-weight: bold;
+  cursor: pointer;
+  -webkit-transition: font-weight 0.2s ease-in;
+  transition: font-weight 0.2s ease-in;
 }
 
-.list > .list-item.active,
-.list > .list-item:active,
-.list > .list-item:focus {
-    background-color: #f9f9f9;
+.list>.list-item.active,
+.list>.list-item:active,
+.list>.list-item:focus {
+  background-color: #f9f9f9;
 }
 
-.nav > .nav-item.active,
-.nav > .nav-item:active,
-.nav > .nav-item:focus {
-    font-weight: bold;
+.nav>.nav-item.active,
+.nav>.nav-item:active,
+.nav>.nav-item:focus {
+  font-weight: bold;
 }
 
 #internal-comment-box {
-    background-color: #f9f9f9;
+  background-color: #f9f9f9;
 }
+
+
+
 
 
 /*ng-prompt*/
 
 .modal-header {
-    padding-bottom: 0px !important;
-    border-bottom: 0px !important;
+  padding-bottom: 0px !important;
+  border-bottom: 0px !important;
 }
 
 .modal-header h4 {
-    font-size: 1.125rem;
-    line-height: 3.5rem;
-    white-space: nowrap;
+  font-size: 1.125rem;
+  line-height: 3.5rem;
+  white-space: nowrap;
 }
 
 .modal-footer {
-    border-top: 0px !important;
-    padding-top: 0px !important;
+  border-top: 0px !important;
+  padding-top: 0px !important;
 }
 
 .modal-footer button:last-child {
-    margin-left: 12px !important;
+  margin-left: 12px !important;
 }
 
 @media (min-width: 544px) {
-    .modal-dialog {
-        max-width: 400px;
-    }
+  .modal-dialog {
+    max-width: 400px;
+  }
 }
+
+
+
 
 
 /*aside subnav*/
@@ -250,12 +274,22 @@ body {
     opacity: 1;
 }*/
 
-.nav > .nav-item.active .text-muted,
-.nav > .nav-item:active .text-muted,
-.nav > .nav-item:focus .text-muted {
-    opacity: 1;
+.nav>.nav-item.active .text-muted,
+.nav>.nav-item:active .text-muted,
+.nav>.nav-item:focus .text-muted {
+  opacity: 1;
 }
 
 .box {
-    /*border: 1px solid rgba(120, 130, 140, .13);*/
+  /*border: 1px solid rgba(120, 130, 140, .13);*/
+}
+
+
+
+
+/*search-servicerequests*/
+
+.search-servicerequests .form-control-sm {
+  padding-top: 0.28rem;
+  padding-bottom: 0.28rem;
 }
