--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -23,22 +23,22 @@
                     <div class="nav-active-white">
                         <ul class="nav">
                             <li ng-class="{active:query.$or != null && query.resolvedAt == null}" class="nav-item m-b-xs">
-                                <a ng-click="load({$or:[{operator: party._id},{assignee:party._id}], resolvedAt:null})" class="nav-link text-muted block" title="Issue Received or Assigned To You">
+                                <a ng-click="load({$or:[{operator: party._id},{assignee:party._id}], resolvedAt:null , resetPage:true})" class="nav-link text-muted block" title="Issue Received or Assigned To You">
                                 Inbox
                                 </a>
                             </li>
                             <li ng-class="{active:query.operator == null && query.$or == null && query.resolvedAt == null && !query.service && !query.status && !query.priority && !query.jurisdiction}" class="nav-item m-b-xs">
-                                <a ng-click="load({operator:null, resolvedAt:null})" class="nav-link text-muted block" title="Reported Issues Using Other Method Than Call Center">
+                                <a ng-click="load({operator:null, resolvedAt:null, resetPage:true})" class="nav-link text-muted block" title="Reported Issues Using Other Method Than Call Center">
                                 Un-Attended
                                 </a>
                             </li>
                             <li ng-class="{active:query.operator != null && query.resolvedAt == null}" class="nav-item m-b-xs">
-                                <a ng-click="load({resolvedAt:null, operator:{$ne:null}})" class="nav-link text-muted block" title="Reported Issues Currently Not Resolved">
+                                <a ng-click="load({resolvedAt:null, operator:{$ne:null}, resetPage:true})" class="nav-link text-muted block" title="Reported Issues Currently Not Resolved">
                                 Un-Resolved
                                 </a>
                             </li>
                             <li ng-class="{active:query.resolvedAt != null}" class="nav-item m-b-xs">
-                                <a ng-click="load({resolvedAt:{$ne:null}})" class="nav-link text-muted block" title="Reported Issues That Have Been Resolved">
+                                <a ng-click="load({resolvedAt:{$ne:null}, resetPage:true})" class="nav-link text-muted block" title="Reported Issues That Have Been Resolved">
                                 Resolved
                                 </a>
                             </li>
@@ -52,7 +52,7 @@
                     <div class="nav-active-white">
                         <ul class="nav">
                             <li ng-class="{active:query.status == status._id}" class="nav-item m-b-xs" ng-repeat="status in statuses">
-                                <a ng-click="load({'status':status._id})" class="nav-link text-muted block">
+                                <a ng-click="load({'status':status._id, resetPage:true})" class="nav-link text-muted block">
                                     <span class="pull-right text-sm label danger rounded" style="background-color: {{status.color}}">
                                         {{summaries.statuses[status._id]}}
                                     </span>{{status.name}}</a>
@@ -67,7 +67,7 @@
                     <div class="nav-active-white">
                         <ul class="nav">
                             <li ng-class="{active:query.priority == priority._id}" class="nav-item m-b-xs" ng-repeat="priority in priorities">
-                                <a ng-click="load({'priority':priority._id})" class="nav-link text-muted block">
+                                <a ng-click="load({'priority':priority._id, resetPage:true})" class="nav-link text-muted block">
                                     <span class="pull-right text-sm label danger rounded" style="background-color: {{priority.color}}">
                                         {{summaries.priorities[priority._id]}}
                                     </span>{{priority.name}}</a>
@@ -82,7 +82,7 @@
                     <div class="nav-active-white">
                         <ul class="nav">
                             <li ng-class="{active:query.service == service._id}" class="nav-item m-b-xs" ng-repeat="service in services">
-                                <a ng-click="load({service:service._id})" class="nav-link text-muted block">
+                                <a ng-click="load({service:service._id, resetPage:true})" class="nav-link text-muted block">
                                     <span class="pull-right text-sm label danger rounded" style="background-color: {{service.color}}">
                                     {{summaries.services[service._id]}}
                                     </span> {{service.name}}
@@ -98,7 +98,7 @@
                     <div class="nav-active-white">
                         <ul class="nav">
                             <li ng-class="{active:query.jurisdiction == jurisdiction._id}" class="nav-item m-b-xs" ng-repeat="jurisdiction in jurisdictions">
-                                <a ng-click="load({'jurisdiction':jurisdiction._id})" class="nav-link text-muted block">
+                                <a ng-click="load({'jurisdiction':jurisdiction._id, resetPage:true})" class="nav-link text-muted block">
                                     <span class="pull-right text-sm label danger rounded" style="background-color: {{jurisdiction.color}}">
                                         {{summaries.jurisdictions[jurisdiction._id]}}
                                     </span>{{jurisdiction.name}}</a>
