update parties(user+apps+etc) management ui

--- a/app/styles/theme-overrides.css
+++ b/app/styles/theme-overrides.css
@@ -108,6 +108,8 @@ body {
 
 
 
+
+
 /*support angular bootstrap*/
 
 .nav,
@@ -122,12 +124,16 @@ body {
 
 
 
+
+
 /*settings style*/
 
 .search-settings {
   padding: 0.9rem;
   font-family: Lato;
 }
+
+
 
 
 
@@ -166,6 +172,8 @@ body {
 
 
 
+
+
 /*status navigation*/
 
 .nav-active-white .nav-link {
@@ -178,12 +186,16 @@ body {
 
 
 
+
+
 /*list*/
 
 .list-item-padded {
   padding-top: 16px;
   padding-bottom: 16px;
 }
+
+
 
 
 
@@ -235,6 +247,8 @@ body {
 
 
 
+
+
 /*ng-prompt*/
 
 .modal-header {
@@ -262,6 +276,8 @@ body {
     max-width: 400px;
   }
 }
+
+
 
 
 
@@ -296,16 +312,38 @@ body {
 
 
 
+
+
 /*search-servicerequests*/
 
-.search-servicerequests .form-control-sm {
+.list-search .form-control-sm {
   padding-top: 0.28rem;
   padding-bottom: 0.28rem;
 }
+
+
 
 
 /*ensure all sv charts text use lato font*/
 
 svg text {
   font-family: Lato !important;
+}
+
+
+
+/*pager*/
+
+.list-pager {
+  padding-left: 0;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+.list-pager .disabled>a,
+.list-pager .disabled>a:focus,
+.list-pager .disabled>a:hover,
+.list-pager .disabled>span {
+  color: #777;
+  cursor: not-allowed;
 }
