--- a/app/views/servicerequests/_partials/list.html
+++ b/app/views/servicerequests/_partials/list.html
@@ -1,7 +1,7 @@
 <!-- start servicerequests list -->
 <div class="row-col lt">
     <!-- start servicerequests list search -->
-    <div class="p-a b-b search-servicerequests">
+    <div class="p-a b-b list-search">
         <form>
             <div class="input-group">
                 <input type="text" ng-enter="onSearch()" ng-model="search.q" class="form-control form-control-sm" placeholder="Search Issues ...">
