add Issue per Area - Issue Load to indicate what is load per jurisdiction

--- a/app/views/dashboards/standings.html
+++ b/app/views/dashboards/standings.html
@@ -12,13 +12,32 @@
   <div class="app-body-inner">
     <div class="row-col">
       <div class="col-lg b-r">
+        <!-- start per jurisdiction count summary -->
+        <div class="padding">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="box">
+                <div class="box-header">
+                  <h3>Issue per Area - Issue Load</h3>
+                  <small class="block text-muted">
+                                 Count of Reported Issues by Their Area
+                                </small>
+                </div>
+                <div class="box-body">
+                  <echart config="perJurisdictionConfig" options="perJurisdictionOptions"></echart>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end per jurisdiction count summary -->
         <!-- start per jurisdiction per status count summary -->
         <div class="padding">
           <div class="row">
             <div class="col-sm-12">
               <div class="box">
                 <div class="box-header">
-                  <h3>Issue per Area per Status - Working Progress</h3>
+                  <h3>Issue per Area per Status - Work Load</h3>
                   <small class="block text-muted">
                                  Count of Reported Issues by Their Area and Status
                                 </small>
