Issue per Area per Service Group - Affected Business Units

--- a/app/views/dashboards/standings.html
+++ b/app/views/dashboards/standings.html
@@ -31,6 +31,25 @@
           </div>
         </div>
         <!-- end per jurisdiction count standing -->
+        <!-- start per jurisdiction per service group count standing -->
+        <div class="padding">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="box">
+                <div class="box-header">
+                  <h3>Issue per Area per Service Group - Affected Business Units</h3>
+                  <small class="block text-muted">
+                                 Count of Reported Issues by Their Area and Service Group
+                                </small>
+                </div>
+                <div class="box-body">
+                  <echart config="perJurisdictionPerServiceGroupConfig" options="perJurisdictionPerServiceGroupOptions"></echart>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end per jurisdiction per service group count standing -->
         <!-- start per jurisdiction per priority count standing -->
         <div class="padding">
           <div class="row">
